# portainer-cli

./: Makefile  Pipfile  pyproject.toml  setup.py
.github/workflows/: ci.yml
portainer_cli/: __init__.py
