[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "portainer-cli"
version = "0.3.0"
description = "Command line interface to easy communicate to your Portainer application."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ilhasoft's Web Team", email = "contato@ilhasoft.com.br" }]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "plac>=1.4.5",
    "requests>=2.32.5",
    "validators>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/bothub-it/portainer-cli"

[project.scripts]
portainer-cli = "portainer_cli:main"

[dependency-groups]
dev = [
    "flake8>=7",
    "setuptools>=75",
    "wheel>=0.45",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["portainer_cli*"]
